# portshim

./: .gitignore  CHANGELOG.md  CNAME  README.md  deploy.py  index.html  portshim  pyproject.toml
.github/workflows/: pr-gate.yml  release-portshim.yml
pages/: airgap.html  changelog.html  gates.html  pipeline.html  profiles.html  reports.html  server.html  wireless.html
references/: anthropic-skills-manifest.md  deployment-manifest.md  llm-architecture.md  red-team-toolkit.md
reports/: portshim-brief-20260710.pptx  portshim-checklist-20260710.xlsx  portshim-report-20260710.docx
scripts/: _build_docx.py  benchmark-models.py  build-shorts.py  build-video.py  check-skill-freshness.py  discover.py  generate-bg-music.py  generate-findings.py  import-legacy.py  network_scan.py  render-docs.py  sync_knowledge.py  test_report.py  wireless_assess.py  wireless_capture.py  wireless_crack.py  wireless_deauth.py  wireless_hardware.py  wireless_pmkid.py  wireless_scan.py  wireless_select.py
scripts/diag/: compare-nics.py
templates/: letter.latex  sources.yaml
tests/: test_deploy.py  test_excel_checklist.py  test_network_scan.py  test_portshim_cli.py  test_report_gen.py  test_retest_diff.py  test_searchsploit.py  test_skill_consistency.py  test_stealth_profiles.py  test_sync_knowledge.py  test_test_report.py  test_topology.py  test_uat_wired.py  test_wireless_assess.py  test_wireless_capture.py  test_wireless_cli.py  test_wireless_crack.py  test_wireless_deauth.py  test_wireless_hardware.py  test_wireless_macspoof.py  test_wireless_pmkid.py  test_wireless_select.py
(+37 files in other folders)
